tests/NormalTests/paczka1/fuzzy1/61844291.err
Error in line 2: eH124 S612 70,3
Error in line 13: 493 S176 52,4
Error in line 17: S176 S320 4,82
Error in line 20: S176 S612 5A,7
Error in line 23: S176 S612 30,8
Error in line 31: cp6v S612 88,16
